syntax = "proto3";

package sift.saved_searches.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {title: "SavedSearch service"}
};

service SavedSearchService {
  // Retrieve a saved search.
  rpc GetSavedSearch(GetSavedSearchRequest) returns (GetSavedSearchResponse) {
    option (google.api.http) = {get: "/api/v1/saved_searches/{saved_search_id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "GetSavedSearch",
      description: "Retrieve a saved search."
    };
  }

  // Create a saved search.
  rpc CreateSavedSearch(CreateSavedSearchRequest) returns (CreateSavedSearchResponse) {
    option (google.api.http) = {
      post: "/api/v1/saved_searches"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "CreateSavedSearch"
      description: "Create a saved search."
    };
  }

  // List saved searches.
  rpc ListSavedSearches(ListSavedSearchesRequest) returns (ListSavedSearchesResponse) {
    option (google.api.http) = {get: "/api/v1/saved_searches"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "ListSavedSearches"
      description: "List saved searches."
    };
  }

  // Updates an existing saved search using using the list of fields specified in `update_mask`.
  rpc UpdateSavedSearch(UpdateSavedSearchRequest) returns (UpdateSavedSearchResponse) {
    option (google.api.http) = {
      patch: "/api/v1/saved_searches"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "UpdateSavedSearch"
      description: "Updates an existing saved search using using the list of fields specified in `update_mask`."
    };
  }

  // Delete a saved search.
  rpc DeleteSavedSearch(DeleteSavedSearchRequest) returns (DeleteSavedSearchResponse) {
    option (google.api.http) = {delete: "/api/v1/saved_searches/{saved_search_id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "DeleteSavedSearch"
      description: "Delete a saved search."
    };
  }

  // Batch deletes saved searches.
  rpc BatchDeleteSavedSearches(BatchDeleteSavedSearchesRequest) returns (BatchDeleteSavedSearchesResponse) {
    option (google.api.http) = {
      post: "/api/v1/saved_searches:batchDelete",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "BatchDeleteSavedSearches"
      description: "Batch delete saved searches."
    };
  }
}

message SavedSearch {
  string saved_search_id = 1 [(google.api.field_behavior) = REQUIRED];
  string organization_id = 2 [(google.api.field_behavior) = REQUIRED];
  string name = 3 [(google.api.field_behavior) = REQUIRED];
  SavedSearchProperties properties = 4 [(google.api.field_behavior) = REQUIRED];
  string created_by_user_id = 5 [(google.api.field_behavior) = REQUIRED];
  string modified_by_user_id = 6 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp created_date = 7 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Timestamp modified_date = 8 [(google.api.field_behavior) = REQUIRED];
}

message SavedSearchProperties {
  string overview_mode = 1 [(google.api.field_behavior) = REQUIRED];
  optional string search_term = 2 [(google.api.field_behavior) = OPTIONAL];
  optional google.protobuf.Timestamp from_date_time = 3 [(google.api.field_behavior) = OPTIONAL];
  optional google.protobuf.Timestamp to_date_time = 4 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem asset_items = 5 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem user_items = 6 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem tag_items = 7 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem annotation_items = 8 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem run_items = 9 [(google.api.field_behavior) = OPTIONAL];
  repeated SavedSearchFilterItem report_template_items = 10 [(google.api.field_behavior) = OPTIONAL];
}

message SavedSearchFilterItem {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  string name = 2 [(google.api.field_behavior) = REQUIRED];
}

// The request for a call to `SavedSearchService_GetSavedSearch` to retrieve a saved search;
message GetSavedSearchRequest {
  string saved_search_id = 1 [(google.api.field_behavior) = REQUIRED];
}

// The response of a call to `SavedSearchService_GetSavedSearch`.
message GetSavedSearchResponse {
  SavedSearch saved_search = 1 [(google.api.field_behavior) = REQUIRED];
}

// The request for a call to `SavedSearchService_ListSavedSearches` to retrieve saved searches.
message ListSavedSearchesRequest {
  // The maximum number of saved searches to return. The service may return fewer than this value.
  // If unspecified, at most 50 saved searches will be returned. The maximum value is 1000; values above
  // 1000 will be coerced to 1000. Optional.
  uint32 page_size = 1 [(google.api.field_behavior) = OPTIONAL];

  // A page token, received from a previous `ListSavedSearches` call.
  // Provide this to retrieve the subsequent page.
  // When paginating, all other parameters provided to `ListSavedSearches` must match
  // the call that provided the page token. Optional.
  string page_token = 2 [(google.api.field_behavior) = OPTIONAL];

  // A [Common Expression Language (CEL)](https://github.com/google/cel-spec) filter string.
  // Available fields to filter by are 'name' and 'saved_search_id'.
  // For further information about how to use CELs, please refer to [this guide](https://github.com/google/cel-spec/blob/master/doc/langdef.md#standard-definitions).
  // For more information about the fields used for filtering, please refer to [this definition](/protocol-buffers/documentation#saved_searches). Optional.
  string filter = 3 [(google.api.field_behavior) = OPTIONAL];

  // This field is only required if your user belongs to multiple organizations.
  string organization_id = 4 [(google.api.field_behavior) = OPTIONAL];
}

// The response of a call to `SavedSearchService_ListSavedSearchesResponse`.
message ListSavedSearchesResponse {
  repeated SavedSearch saved_searches = 1;
  string next_page_token = 2;
}

// The request for a call to `SavedSearchService_CreateSavedSearch` to create a saved search.
message CreateSavedSearchRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  SavedSearchProperties properties = 2 [(google.api.field_behavior) = REQUIRED];
  // This field is only required if your user belongs to multiple organizations.
  string organization_id = 3 [(google.api.field_behavior) = OPTIONAL];
}

// The response for a call to `SavedSearchService_CreateSavedResponse`.
message CreateSavedSearchResponse {
  SavedSearch saved_search = 1 [(google.api.field_behavior) = REQUIRED];
}

// The request for a call to `SavedSearchService_DeleteSavedSearch` to delete a saved search.
message DeleteSavedSearchRequest {
  string saved_search_id = 1 [(google.api.field_behavior) = REQUIRED];
}

// The response of a call to `SavedSearchService_DeleteSavedSearch`.
message DeleteSavedSearchResponse {}

// The request for a call to `SavedSearchService_BatchDeleteSavedSearches` to delete saved searches.
message BatchDeleteSavedSearchesRequest {
  // Limit of 1000 searches per batch
  repeated string saved_search_ids = 1;
}

// The response of a call to `SavedSearchService_BatchDeleteSavedSearches`.
message BatchDeleteSavedSearchesResponse {}

// The request for a call to `SavedSearchService_UpdateSavedSearch` to update a saved search.
message UpdateSavedSearchRequest {
  // The saved search to update.
  SavedSearch saved_search = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to be updated. The fields available to be updated are `name` and `properties`.
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];
}

// The response of a call to `SavedSearchService_UpdateSavedSearch`.
message UpdateSavedSearchResponse {
  SavedSearch saved_search = 1 [(google.api.field_behavior) = REQUIRED];
}
